--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -85,7 +85,7 @@
 
   {% block scripts %}
     <script type="text/javascript">
-      $(".button-collapse").sideNav();
+      $(".button-collapse").sideNav();   // THIS IS NOT WORKING!        
     </script>
   {% endblock scripts %}
 
