--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -12,92 +12,155 @@
 	<!-- CSS for text within the jumbotron havent been defined -->
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8 col-sm-8">
-				<h1>NITK<br>Students' Council</h1>
-			</div>
+			<h1>NITK<br>Students' Council</h1>
 		</div>
 	</div>
 </div>
 
 <div class="row bg-white">
 
-	<div class="col s12 m4">
-        <div class="grey-text">
-          <div class="icon-block">
-            <h1 class="center red-text"><i class="material-icons">speaker_notes</i></h1>
-            <h5 class="center">News</h5>
-          </div>
-        </div>
-        <!-- Put in template for each news article -->
-		<div class="row">
-	        <div class="col s12">
-	          <div class="card blue-grey darken-1">
-	            <div class="card-content white-text">
-	              <span class="card-title">Card Title</span>
-	              <p>I am a very simple card. I am good at containing small bits of information.
-	              I am convenient because I require little markup to use effectively.</p>
-	            </div>
-	            <div class="card-action">
-	              <a href="#">This is a link</a>
-	              <a href="#">This is a link</a>
-	            </div>
-	          </div>
-	        </div>
-	    </div>
-        <!-- Template ends here -->
-	</div>
 
-	<div class="col s12 m4">
-		<div class="grey-text">
-          <div class="icon-block">
-            <h1 class="center red-text"><i class="material-icons">event</i></h1>
-            <h5 class="center">Events</h5>
-          </div>
-        </div>
-        <!-- Put in template for each event -->
-		<div class="row">
-	        <div class="col s12">
-	          <div class="card blue-grey darken-1">
-	            <div class="card-content white-text">
-	              <span class="card-title">Card Title</span>
-	              <p>I am a very simple card. I am good at containing small bits of information.
-	              I am convenient because I require little markup to use effectively.</p>
-	            </div>
-	            <div class="card-action">
-	              <a href="#">This is a link</a>
-	              <a href="#">This is a link</a>
-	            </div>
-	          </div>
-	        </div>
-	    </div>
-        <!-- Template ends here -->
-	</div>
 
-	<div class="col s12 m4">
-		<div class="grey-text">
-          <div class="icon-block">
-            <h1 class="center red-text"><i class="material-icons">book</i></h1>
-            <h5 class="center">Blog</h5>
-          </div>
-        </div>
-        <!-- Put in template for each blog -->
-		<div class="row">
-	        <div class="col s12">
-	          <div class="card blue-grey darken-1">
-	            <div class="card-content white-text">
-	              <span class="card-title">Card Title</span>
-	              <p>I am a very simple card. I am good at containing small bits of information.
-	              I am convenient because I require little markup to use effectively.</p>
-	            </div>
-	            <div class="card-action">
-	              <a href="#">This is a link</a>
-	              <a href="#">This is a link</a>
-	            </div>
-	          </div>
-	        </div>
-	    </div>
-        <!-- Template ends here -->
+<div class="row">
+	<div class="col s12 m4 l2">
+		<h5 class="center-align">Navigation</h5>
+		<ul>
+		  
+		  <li class="no-padding">
+		    <ul class="collapsible collapsible-accordion">
+		      <li class="bold"><a class="collapsible-header  waves-effect waves-teal">Student Council</a>
+		        <div class="collapsible-body">
+		          <ul class="center-align">
+		            <li><a href="">Meassage from the President</a></li>
+		            <li><a href="">Meet the Representatives</a></li>
+		            <li><a href="">Announcements</a></li>
+		            <li><a href="">Minutes of Meeting</a></li>
+		          </ul>
+		        </div>
+		      </li>
+		      <li class="bold"><a class="collapsible-header  waves-effect waves-teal">What's New</a>
+		        <div class="collapsible-body">
+		          <ul class="center-align">
+		          	<li><a href="">News</a></li>
+		          	<li><a href="">Events</a></li>
+		          	<li><a href="">Calender</a></li>
+		          	<li><a href="">Blog</a></li>
+		          	<li><a href="">Club Life</a></li>
+		          </ul>
+		        </div>
+		      </li>
+		      <li class="bold"><a class="collapsible-header  waves-effect waves-teal">Miscellaneous</a>
+		        <div class="collapsible-body">
+		          <ul class="center-align">
+		           	<li><a href="">Achievements and Agenda</a></li>
+		           	<li><a href="">Opportunities</a></li>
+		           	<li><a href="">Contact Numbers</a></li>
+		           	<li><a href="">FAQ</a></li>
+		          </ul>
+		        </div>
+		      </li>
+		    </ul>
+		  </li>
+		</ul>
+		      
+
+
 	</div>
+	
+	<div class="col s12 m8 l10">
+		<div class="row">
+			<div class="col s12 l4">
+		        <div class="grey-text">
+		          <div class="icon-block">
+		            <h1 class="center black-text"><i class="material-icons">speaker_notes</i></h1>
+		            <h5 class="center"><a href="">News</a></h5>
+		          </div>
+		        </div>
+		        <!-- Put in template for each news article -->
+				<div class="row">
+			        <div class="col s12">
+			          <div class="card white">
+			            <div class="card-content blue-text text-darken-4">
+			              <span class="card-title">Top Stories</span>
+			             		<ul class="collection">
+			                      <li class="collection-item dismissable"><div><a href="#!">IE NITK almost done building v 0.0.1 of the student council website</a></div></li>
+			                      <li class="collection-item dismissable"><div><a href="">News 2</a></div></li>
+			                      <li class="collection-item dismissable"><div><a href="">News 3</a></div></li>
+			                      <li class="collection-item dismissable"><div><a href="">News 4</a></div></li>
+			                    </ul>
+			            </div>
+			            <div class="card-action">
+			              <a href="#">More News</a>
+			            </div>
+			          </div>
+			        </div>
+			    </div>
+		        <!-- Template ends here -->
+			</div>
+
+			<div class="col s12 l4">
+				<div class="grey-text">
+		          <div class="icon-block">
+		            <h1 class="center black-text"><i class="material-icons">event</i></h1>
+		            <h5 class="center"><a href="">Events</a></h5>
+		          </div>
+		        </div>
+		        <!-- Put in template for each event -->
+				<div class="row">
+			        <div class="col s12">
+			          <div class="card white">
+			            <div class="card-content blue-text text-darken-4">
+			              <span class="card-title">What's happening in college?</span>
+			             		<ul class="collection">
+			                      <li class="collection-item dismissable"><div><a href="">King of the Hill</a></div></li>
+			                      <li class="collection-item dismissable"><div><a href="">Event 2</a></div></li>
+			                      <li class="collection-item dismissable"><div><a href="">Event 3</a></div></li>
+			                      <li class="collection-item dismissable"><div><a href="">Event 4</a></div></li>
+			                    </ul>
+			            </div>
+			            <div class="card-action">
+			              <a href="#">View All Events</a>
+			              <a href="#">Calender</a>
+			              <a href="">Club Life</a>
+			            </div>
+			          </div>
+			        </div>
+			    </div>
+		        <!-- Template ends here -->
+			</div>
+
+			<div class="col s12 l4">
+				<div class="grey-text">
+		          <div class="icon-block">
+		            <h1 class="center black-text"><i class="material-icons">book</i></h1>
+		            <h5 class="center"><a href="">Blog</a></h5>
+		          </div>
+		        </div>
+		        <!-- Put in template for each blog -->
+				<div class="row">
+			        <div class="col s12">
+			          <div class="card white">
+			            <div class="card-content blue-text text-darken-4">
+			              <span class="card-title">The Beach Side Blues</span>
+			             		<ul class="collection">
+			                      <li class="collection-item dismissable"><div><a href="">The IE life blog</a></div></li>
+			                      <li class="collection-item dismissable"><div><a href="">Event 2</a></div></li>
+			                      <li class="collection-item dismissable"><div><a href="">Event 3</a></div></li>
+			                      <li class="collection-item dismissable"><div><a href="">Event 4</a></div></li>
+			                    </ul>
+			            </div>
+			            <div class="card-action">
+			              <a href="#">More Blogs</a>
+			            </div>
+			          </div>
+			        </div>
+			    </div>
+		        <!-- Template ends here -->
+			</div>
+		</div>
+		
+	</div>
+</div>
 
 </div>
 
