--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -70,13 +70,85 @@
 	<div class="col s12 m8 l10">
 		<div class="row">
 			<div class="col s12 l4">
+				<div class="grey-text">
+		          <div class="icon-block">
+		            <h1 class="center black-text"><i class="material-icons">event</i></h1>
+		            <h5 class="center"><a href="">Events</a></h5>
+		          </div>
+		        </div>
+				<div class="row">
+			        <div class="col s12">
+			          <div class="card white">
+			            <div class="card-content blue-text text-darken-4">
+			              <span class="card-title">What's happening in college?</span>
+			             		<ul>
+			                      <li>
+			                      	<a href="" class="event_item">
+			                      		<div class="event_datetime">
+			                      			<span class="event_month">FEB</span>
+			                      			<span class="event_day">21</span>
+			                      			<span class="event_time">Ongoing</span>
+			                      		</div>
+			                      		<div class="event_name">
+			                      			<span>  Website development</span>
+			                      		</div>
+			                      	</a>
+			                      </li>
+			                      <li>
+			                      	<a href="" class="event_item">
+			                      		<div class="event_datetime">
+			                      			<span class="event_month">FEB</span>
+			                      			<span class="event_day">21</span>
+			                      			<span class="event_time">Ongoing</span>
+			                      		</div>
+			                      		<div class="event_name">
+			                      			<span> King of the Hill</span>
+			                      		</div>
+			                      	</a>
+			                      </li>
+			                      <li>
+			                      	<a href="" class="event_item">
+			                      		<div class="event_datetime">
+			                      			<span class="event_month">FEB</span>
+			                      			<span class="event_day">24</span>
+			                      			<span class="event_time">7:00pm</span>
+			                      		</div>
+			                      		<div class="event_name">
+			                      			<span> Event 3</span>
+			                      		</div>
+			                      	</a>
+			                      </li>
+			                      <li>
+			                      	<a href="" class="event_item">
+			                      		<div class="event_datetime">
+			                      			<span class="event_month">FEB</span>
+			                      			<span class="event_day">26</span>
+			                      			<span class="event_time">2:00pm</span>
+			                      		</div>
+			                      		<div class="event_name">
+			                      			<span> Event 4</span>
+			                      		</div>
+			                      	</a>
+			                      </li>
+			                    </ul>
+			            </div>
+			            <div class="card-action">
+			              <a href="#">View All Events</a>
+			              <a href="#">Calender</a>
+			              <a href="">Club Life</a>
+			            </div>
+			          </div>
+			        </div>
+			    </div>
+			</div>
+
+			<div class="col s12 l4">
 		        <div class="grey-text">
 		          <div class="icon-block">
 		            <h1 class="center black-text"><i class="material-icons">speaker_notes</i></h1>
 		            <h5 class="center"><a href="">News</a></h5>
 		          </div>
 		        </div>
-		        <!-- Put in template for each news article -->
 				<div class="row">
 			        <div class="col s12">
 			          <div class="card white">
@@ -95,38 +167,6 @@
 			          </div>
 			        </div>
 			    </div>
-		        <!-- Template ends here -->
-			</div>
-
-			<div class="col s12 l4">
-				<div class="grey-text">
-		          <div class="icon-block">
-		            <h1 class="center black-text"><i class="material-icons">event</i></h1>
-		            <h5 class="center"><a href="">Events</a></h5>
-		          </div>
-		        </div>
-		        <!-- Put in template for each event -->
-				<div class="row">
-			        <div class="col s12">
-			          <div class="card white">
-			            <div class="card-content blue-text text-darken-4">
-			              <span class="card-title">What's happening in college?</span>
-			             		<ul class="collection">
-			                      <li class="collection-item dismissable"><div><a href="">King of the Hill</a></div></li>
-			                      <li class="collection-item dismissable"><div><a href="">Event 2</a></div></li>
-			                      <li class="collection-item dismissable"><div><a href="">Event 3</a></div></li>
-			                      <li class="collection-item dismissable"><div><a href="">Event 4</a></div></li>
-			                    </ul>
-			            </div>
-			            <div class="card-action">
-			              <a href="#">View All Events</a>
-			              <a href="#">Calender</a>
-			              <a href="">Club Life</a>
-			            </div>
-			          </div>
-			        </div>
-			    </div>
-		        <!-- Template ends here -->
 			</div>
 
 			<div class="col s12 l4">
@@ -136,7 +176,6 @@
 		            <h5 class="center"><a href="">Blog</a></h5>
 		          </div>
 		        </div>
-		        <!-- Put in template for each blog -->
 				<div class="row">
 			        <div class="col s12">
 			          <div class="card white">
@@ -144,9 +183,9 @@
 			              <span class="card-title">The Beach Side Blues</span>
 			             		<ul class="collection">
 			                      <li class="collection-item dismissable"><div><a href="">The IE life blog</a></div></li>
-			                      <li class="collection-item dismissable"><div><a href="">Event 2</a></div></li>
-			                      <li class="collection-item dismissable"><div><a href="">Event 3</a></div></li>
-			                      <li class="collection-item dismissable"><div><a href="">Event 4</a></div></li>
+			                      <li class="collection-item dismissable"><div><a href="">Blog 2</a></div></li>
+			                      <li class="collection-item dismissable"><div><a href="">Blog 3</a></div></li>
+			                      <li class="collection-item dismissable"><div><a href="">Blog 4</a></div></li>
 			                    </ul>
 			            </div>
 			            <div class="card-action">
@@ -155,7 +194,6 @@
 			          </div>
 			        </div>
 			    </div>
-		        <!-- Template ends here -->
 			</div>
 		</div>
 		
