--- a/src/static/site/css/main.css
+++ b/src/static/site/css/main.css
@@ -133,7 +133,7 @@ body>.navbar-transparent {
 .text-page {
     padding: 120px 0;
 }
-
+s
 #map-outer {
     height: 440px;
     padding: 40px 20px;
@@ -233,7 +233,7 @@ i.biggercircle {
 
 .content { max-width: 1000px; margin: 50px auto; padding: 20px; margin-top: 0px; background: white;}
 
-.bg-white { background-color: white;}
+.bg-white { background-color: #f2f2f2;}
 
 .page-info .container {
     margin-top: 20px;
@@ -310,4 +310,67 @@ i.biggercircle {
 
 .event_month, .event_day, .event_time {
     display: block;
+}
+
+
+.btn2 {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.btn2-circle {
+    width: 70px;
+    height: 70px;
+    margin-top: 15px;
+    padding: 7px 16px;
+    border: 2px solid #fff;
+    border-radius: 100%!important;
+    font-size: 40px;
+    color: #fff;
+    background: 0 0;
+    -webkit-transition: background .3s ease-in-out;
+    -moz-transition: background .3s ease-in-out;
+    transition: background .3s ease-in-out;
+}
+
+.btn2-circle:hover,
+.btn2-circle:focus {
+    outline: 0;
+    color: #fff;
+    background: rgba(255,255,255,.1);
+}
+
+.btn2-circle i.animated {
+    -webkit-transition-property: -webkit-transform;
+    -webkit-transition-duration: 1s;
+    -moz-transition-property: -moz-transform;
+    -moz-transition-duration: 1s;
+}
+
+.btn2-circle:hover i.animated {
+    -webkit-animation-name: pulse;
+    -moz-animation-name: pulse;
+    -webkit-animation-duration: 1.5s;
+    -moz-animation-duration: 1.5s;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-timing-function: linear;
 }
