--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -13,15 +13,19 @@
 	<div class="container">
 		<div class="row">
 			<h1>NITK<br>Students' Council</h1>
+			<a href="#more" class="btn2 btn2-circle page-scroll">
+                            <i class="fa fa-angle-double-down animated"></i>
+                        </a>
 		</div>
 	</div>
 </div>
-
+<section id="more">
 <div class="row bg-white">
 
 
 
 <div class="row">
+        <br><br><br>
 	<div class="col s12 m4 l2">
 		<h5 class="center-align">Navigation</h5>
 		<ul>
@@ -201,7 +205,7 @@
 </div>
 
 </div>
-
+</section>
 {% endblock %}
 
 {% block scripts %}
