--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -26,7 +26,7 @@
 
 <div class="row">
         <br><br><br>
-	<div class="col s12 m4 l2">
+	<!-- <div class="col s12 m4 l2">
 		<h5 class="center-align">Navigation</h5>
 		<ul>
 		  
@@ -70,8 +70,8 @@
 
 
 	</div>
-	
-	<div class="col s12 m8 l10">
+ -->	
+	<div class="col s12">
 		<div class="row">
 			<div class="col s12 l4">
 				<div class="grey-text">
