--- a/src/static/site/css/main.css
+++ b/src/static/site/css/main.css
@@ -233,7 +233,7 @@ i.biggercircle {
 
 .content { max-width: 1000px; margin: 50px auto; padding: 20px; margin-top: 0px; background: white;}
 
-.bg-white { background-color: #f2f2f2;}
+.bg-grey { background-color: #f2f2f2;}
 
 .page-info .container {
     margin-top: 20px;
