--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -20,58 +20,10 @@
 	</div>
 </div>
 <section id="more">
-<div class="row bg-white">
-
-
-
+<div class="row bg-grey">
 <div class="row">
-        <br><br><br>
-	<!-- <div class="col s12 m4 l2">
-		<h5 class="center-align">Navigation</h5>
-		<ul>
-		  
-		  <li class="no-padding">
-		    <ul class="collapsible collapsible-accordion">
-		      <li class="bold"><a class="collapsible-header  waves-effect waves-teal">Student Council</a>
-		        <div class="collapsible-body">
-		          <ul class="center-align">
-		            <li><a href="">Meassage from the President</a></li>
-		            <li><a href="">Meet the Representatives</a></li>
-		            <li><a href="">Announcements</a></li>
-		            <li><a href="">Minutes of Meeting</a></li>
-		          </ul>
-		        </div>
-		      </li>
-		      <li class="bold"><a class="collapsible-header  waves-effect waves-teal">What's New</a>
-		        <div class="collapsible-body">
-		          <ul class="center-align">
-		          	<li><a href="">News</a></li>
-		          	<li><a href="">Events</a></li>
-		          	<li><a href="">Calender</a></li>
-		          	<li><a href="">Blog</a></li>
-		          	<li><a href="">Club Life</a></li>
-		          </ul>
-		        </div>
-		      </li>
-		      <li class="bold"><a class="collapsible-header  waves-effect waves-teal">Miscellaneous</a>
-		        <div class="collapsible-body">
-		          <ul class="center-align">
-		           	<li><a href="">Achievements and Agenda</a></li>
-		           	<li><a href="">Opportunities</a></li>
-		           	<li><a href="">Contact Numbers</a></li>
-		           	<li><a href="">FAQ</a></li>
-		          </ul>
-		        </div>
-		      </li>
-		    </ul>
-		  </li>
-		</ul>
-		      
 
-
-	</div>
- -->	
-	<div class="col s12">
+	<div class="container">
 		<div class="row">
 			<div class="col s12 l4">
 				<div class="grey-text">
@@ -208,6 +160,4 @@
 </section>
 {% endblock %}
 
-{% block scripts %}
 
-{% endblock %}
