--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -20,9 +20,7 @@
 	</div>
 </div>
 <section id="more">
-<div class="row bg-grey">
-<div class="row">
-
+<div class="bg-grey">
 	<div class="container">
 		<div class="row">
 			<div class="col s12 l4">
@@ -46,7 +44,7 @@
 			                      			<span class="event_time">Ongoing</span>
 			                      		</div>
 			                      		<div class="event_name">
-			                      			<span>  Website development</span>
+			                      			<span>&nbsp&nbspWebsite development</span>
 			                      		</div>
 			                      	</a>
 			                      </li>
@@ -58,7 +56,7 @@
 			                      			<span class="event_time">Ongoing</span>
 			                      		</div>
 			                      		<div class="event_name">
-			                      			<span> King of the Hill</span>
+			                      			<span>&nbsp&nbspKing of the Hill</span>
 			                      		</div>
 			                      	</a>
 			                      </li>
@@ -70,7 +68,7 @@
 			                      			<span class="event_time">7:00pm</span>
 			                      		</div>
 			                      		<div class="event_name">
-			                      			<span> Event 3</span>
+			                      			<span>&nbsp&nbspEvent 3</span>
 			                      		</div>
 			                      	</a>
 			                      </li>
@@ -82,7 +80,7 @@
 			                      			<span class="event_time">2:00pm</span>
 			                      		</div>
 			                      		<div class="event_name">
-			                      			<span> Event 4</span>
+			                      			<span>&nbsp&nbspEvent 4</span>
 			                      		</div>
 			                      	</a>
 			                      </li>
@@ -154,7 +152,6 @@
 		</div>
 		
 	</div>
-</div>
 
 </div>
 </section>
