--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -34,7 +34,7 @@
     <li><a href="">News</a></li>
     <li class="divider"></li>
     <li><a href="">Events</a></li>
-    <li><a href="">Calender</a></li>
+    <li><a href="">Calendar</a></li>
     <li class="divider"></li>
     <li><a href="">Blog</a></li>
     <li class="divider"></li>
@@ -59,30 +59,32 @@
           <li><a href="">Login</a></li>
         </ul>
         <ul id="slide-out" class="side-nav collapsible collapsible-accordion">
-            <li class="bold"><a class="collapsible-header  waves-effect waves-teal">Student Council</a>
+            <li class="bold"><a class="collapsible-header waves-effect waves-teal">Student Council</a>
               <div class="collapsible-body">
                 <ul>
-                  <li><a href="">Meassage from the President</a></li>
+                  <li><a href="">Message from the President</a></li>
                   <li><a href="">Meet the Representatives</a></li>
                   <li><a href="">Minutes of the Meeting</a></li>
                   <li><a href="">Announcements</a></li>
                 </ul>
               </div>
-            <li class="bold"><a class="collapsible-header  waves-effect waves-teal">What's New</a>
+            </li>
+            <li class="bold"><a class="collapsible-header waves-effect waves-teal">What's New</a>
             <div class="collapsible-body">
                 <ul>
                   <li><a href="">News</a></li>
                   <li class="divider"></li>
                   <li><a href="">Events</a></li>
-                  <li><a href="">Calender</a></li>
+                  <li><a href="">Calendar</a></li>
                   <li class="divider"></li>
                   <li><a href="">Blog</a></li>
                   <li class="divider"></li>
                   <li><a href="">Club Life</a></li>
                 </ul>
               </div>
-            <li class="bold"><a class="collapsible-header  waves-effect waves-teal">Miscellaneous</a>
-            <div class="collapsible-body">
+            </li>
+            <li class="bold"><a href="" class="collapsible-header waves-effect waves-teal">Achievements and Agenda</a></li>
+            <!-- <div class="collapsible-body">
                 <ul>
                   <li><a href="">Achievements and Agenda</a></li>
                   <li><a href="">Opportunities</a></li>
@@ -90,8 +92,10 @@
                   <li><a href="">Contact Numbers</a></li>
                   <li><a href="">FAQ</a></li>
                 </ul>
-              </div>
-
+              </div> -->
+            <li class="bold"><a href="" class="collapsible-header waves-effect waves-teal">Opportunities</a></li>
+            <li class="bold"><a href="" class="collapsible-header waves-effect waves-teal">Contact Numbers</a></li>
+            <li class="bold"><a href="" class="collapsible-header waves-effect waves-teal">FAQ</a></li>
           </ul>
           <a href="" id="sidenav" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
       </div>
