--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -23,7 +23,7 @@
 <div class="bg-grey">
 	<div class="container">
 		<div class="row">
-			<div class="col s12 l4">
+			<div class="col s12 l3">
 				<div class="grey-text">
 		          <div class="icon-block">
 		            <h1 class="center black-text"><i class="material-icons">event</i></h1>
@@ -44,7 +44,7 @@
 			                      			<span class="event_time">Ongoing</span>
 			                      		</div>
 			                      		<div class="event_name">
-			                      			<span>&nbsp&nbspWebsite development</span>
+			                      			<span>Website development</span>
 			                      		</div>
 			                      	</a>
 			                      </li>
@@ -56,7 +56,7 @@
 			                      			<span class="event_time">Ongoing</span>
 			                      		</div>
 			                      		<div class="event_name">
-			                      			<span>&nbsp&nbspKing of the Hill</span>
+			                      			<span>King of the Hill</span>
 			                      		</div>
 			                      	</a>
 			                      </li>
@@ -68,7 +68,7 @@
 			                      			<span class="event_time">7:00pm</span>
 			                      		</div>
 			                      		<div class="event_name">
-			                      			<span>&nbsp&nbspEvent 3</span>
+			                      			<span>Event 3</span>
 			                      		</div>
 			                      	</a>
 			                      </li>
@@ -80,7 +80,7 @@
 			                      			<span class="event_time">2:00pm</span>
 			                      		</div>
 			                      		<div class="event_name">
-			                      			<span>&nbsp&nbspEvent 4</span>
+			                      			<span>Event 4</span>
 			                      		</div>
 			                      	</a>
 			                      </li>
@@ -96,7 +96,7 @@
 			    </div>
 			</div>
 
-			<div class="col s12 l4">
+			<div class="col s12 l6">
 		        <div class="grey-text">
 		          <div class="icon-block">
 		            <h1 class="center black-text"><i class="material-icons">speaker_notes</i></h1>
@@ -123,7 +123,7 @@
 			    </div>
 			</div>
 
-			<div class="col s12 l4">
+			<div class="col s12 l3">
 				<div class="grey-text">
 		          <div class="icon-block">
 		            <h1 class="center black-text"><i class="material-icons">book</i></h1>
